[gd_scene load_steps=9 format=3 uid="uid://ddn8pt45rca4n"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Pattern/ElementMorphologyPatternView.gd" id="1_q5gkp"]
[ext_resource type="PackedScene" uid="uid://cujhi16cmpffu" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Scroll/Scroll_Vertical.tscn" id="2_cj4db"]
[ext_resource type="Texture2D" uid="uid://c8kk6om0lc4fd" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_S.png" id="2_ftdb2"]
[ext_resource type="PackedScene" uid="uid://dsf0flbf8igka" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Pattern/Prefab_PatternVectorPairWithDelete.tscn" id="3_k6hof"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextureButton_Element.gd" id="3_l6qnr"]
[ext_resource type="Texture2D" uid="uid://dhnp5k27l8p5r" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_C.png" id="3_tay1s"]
[ext_resource type="Texture2D" uid="uid://d1ja63xw63so0" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_H.png" id="4_q8f6c"]
[ext_resource type="Texture2D" uid="uid://d3ts7d266uamh" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Plus_D.png" id="5_c7fbl"]

[node name="ElementMorphologyPatternView" type="VBoxContainer"]
custom_minimum_size = Vector2(630, 0)
offset_right = 630.0
offset_bottom = 275.0
size_flags_horizontal = 3
script = ExtResource("1_q5gkp")

[node name="header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Patterns"

[node name="add_vector" type="TextureButton" parent="header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = ExtResource("2_ftdb2")
texture_pressed = ExtResource("3_tay1s")
texture_hover = ExtResource("4_q8f6c")
texture_disabled = ExtResource("5_c7fbl")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_l6qnr")
scale_multiplier = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Control3" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Z"
horizontal_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Z"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2

[node name="Patterns" parent="." instance=ExtResource("2_cj4db")]
custom_minimum_size = Vector2(550, 180)
layout_mode = 2
size_flags_vertical = 3
prefab_to_spawn = ExtResource("3_k6hof")

[connection signal="pressed" from="header/add_vector" to="." method="add_pattern_pair_row"]
